--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,19 @@
 .body__container {
     height: 846px;
     width: 412px;
-    border: 1px solid black;
+    margin-left: 50px;
+    margin-top: 20px;
     font-family: 'Song Myung', serif;
     background-color: #fbf6f0;
+}
+
+.btn:hover{
+    box-shadow: inset 0px 5px 5px 0px rgba(0,0,0,0.075);
 }
 
 header {
     width: 100%;
     height: 50px;
-    border: 1px solid black;
 }
 
 .my_info{
@@ -29,10 +33,9 @@ header {
 .object_container{
     width: 100%;
     height: 348px;
-    border: 1px solid black;
     display: grid;
-    grid-template-columns: repeat(3 1fr);
-    grid-template-rows: repeat(3 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
 
@@ -44,19 +47,27 @@ header {
     height: 100%;
     grid-row: 1 / 3;
     grid-column: 1 /3;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .monthly_title{
+    font-size: 30px;
+    margin-bottom: 30px;
+    margin-top: 35px;
+}
+
+
+.monthly_total{
     font-size: 25px;
-    
+    margin-bottom: 15px;
 }
+.monthly_balance{
+    font-size: 25px;
 
-.monthly_info{
-    grid-row : 1 / 2;
-    grid-column: 2 / 3;
 }
-
 .today_object{
     border: 1px solid #ffda77;
     background-color: #ffda77;
@@ -65,14 +76,30 @@ header {
     height: 100%;
     grid-row: 2 / 4;
     grid-column: 2 / 4;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
+.today_title{
+    font-size: 30px;
+    margin-bottom: 20px;
+    margin-top: 35px;
+}
 
+.today_total{
+    font-size: 25px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+.today_balance{
+    font-size: 25px;
+    
+}
 .account{
     width: 100%;
     height: 50px;
-    border: 1px solid black;
 }
 
 .input_account{
@@ -88,13 +115,60 @@ header {
 .goal{
     width: 100%;
     height: 348px;
-    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 270px 10px 1fr;
+    grid-template-rows: repeat(8, 1fr);
 }
+
+.goal_img{
+    border: 3px solid #aee6e6;
+    border-radius: 10px;
+    grid-row: 2 / 8;
+    grid-column: 1 / 2;
+    margin-left: 10px;
+}
+
+.goal_img img{
+    margin: 5% 0;
+    width: 100%;
+    height: 80%;
+}
+
+.goal_title{
+    grid-row: 2 / 4;
+    grid-column: 3 / 4;
+    font-size: 30px;
+    margin-left: 10px;
+}
+
+.goal_price{
+    font-size: 35px;
+    grid-row: 5 / 6;
+    grid-column: 3 / 4;
+    margin-left: 10px;
+    background: #ffda77;
+    margin: 0px 2px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.goal_balance{
+    
+    font-size: 35px;
+    grid-row: 7 / 8;
+    grid-column: 3 / 4;
+    margin: 0px 2px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #ffa45b;
+
+}
+
 
 .lotto{
     width: 100%;
     height: 50px;
-    border: 1px solid black;
+    
 }
 
 .lotto_sat {
