--- a/css/lotto.css
+++ b/css/lotto.css
@@ -7,16 +7,20 @@
     background-color: #fbf6f0;
 }
 
-
-.home{
-    display: flex;
+.home  {
+    margin: 10px;
+    background: url(../img/home.png);
 }
 
+.home:hover{
+    background: url(../img/home_hover.png);
+}
+/*
 .home img{
     size: 45px;
     margin: 15px;
 }
-
+*/
 
 .lotto_event img{
     width: 330px;
