lotto page done!
한번 눌렀을 때 로또번호 리스트가 나오도록 두번째로 눌렀을 때에 기존의 로또 리스트를 삭제 -> 다시 눌렀을 때 새로운 로또 번호들을 볼 수 있게 한다

--- a/css/lotto.css
+++ b/css/lotto.css
@@ -9,18 +9,14 @@
 
 .home  {
     margin: 10px;
-    background: url(../img/home.png);
 }
 
-.home:hover{
-    background: url(../img/home_hover.png);
-}
-/*
+
 .home img{
     size: 45px;
     margin: 15px;
 }
-*/
+
 
 .lotto_event img{
     width: 330px;
@@ -43,6 +39,12 @@
     margin-top: 50px;
     display: flex;
     flex-direction: column;
+}
+
+.lotto_list p {
+    text-align: center;
+    margin: 20px;
+    font-size: 25px;
 }
 
 .inner_list li{
