--- a/css/account_list.css
+++ b/css/account_list.css
@@ -31,7 +31,7 @@
 
 .write_on {
     grid-column: 2 / 6;
-    grid-row: 5 / 6;
+    grid-row: 6 / 7;
     border: 2px solid #ffa45b;
     background-color: #ffa45b;
     border-radius: 5px;
@@ -56,3 +56,7 @@
     grid-row: 3 / 4;
 }
 
+.content p{
+    margin: 10px;
+    font-size: 20px;
+}
